--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
+  geolocator: ^14.0.2
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
